syntax = "proto3";

option java_package = "com.verygood.security.messages.calm";
option java_outer_classname = "CalmSvc";


message PaymentDetails {
  string amount = 1;
  string cvv = 2;
  // the code could be an enum but I anticipate
  // a lot of issues with possible options
  string currencyCode = 3;
}

message NetworkTokenRequest {
  string vaultId = 1;
  string merchantId = 2;
  string panAlias = 3;
  PaymentDetails paymentDetails = 4;
}

message NetworkToken {
  string token = 1;
  int32 expMonth = 2;
  int32 expYear = 3;
}

message Cryptogram {
  enum Type {
    TAVV = 0;
    DTVV = 1;
  }
  string value = 1;
  string eci = 2;
  Type type = 3;
}

message NetworkTokenResponse {
  NetworkToken token = 1;
  Cryptogram cryptogram = 2;
}

service CalmService {
  // the method throws an error in case no active token exists for a pan alias
  rpc GetActiveNetworkToken (NetworkTokenRequest) returns (NetworkTokenResponse);
}
